# DetectNet_ROS

./: CMakeLists.txt  README.md  package.xml  ros-detectnet-zed-nodelets.xml
config/: coco_airplane.yaml  coco_bottle.yaml  coco_chair.yaml  coco_dog.yaml  facenet.yaml  pednet.yaml  pednet_multi.yaml
launch/: detectnet.launch  detectnet_camera.launch
src/: ros-detectnet-camera.cpp  ros_detectnet.cpp
